--- a/.github/workflows/main_quizkar.yml
+++ b/.github/workflows/main_quizkar.yml
@@ -21,6 +21,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.12'
+          node-version: '20' # Use Node.js 20
+
+
 
       - name: Create and start virtual environment
         run: |
